src/objects/QPMS__Error__c.object
<CustomObject>
    <description>Contains errors generated from the QPMS package during normal operations.</description>
    <fields>
        <fullName>QPMS__Context_Type__c</fullName>
        <description>Context that generated the error, if known.</description>
        <inlineHelpText>Context that generated the error, if known.</inlineHelpText>
        <label>Context Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Datetime__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date &amp; time the error occurred</description>
        <inlineHelpText>Date &amp; time the error occurred</inlineHelpText>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an email notification has been sent regarding this error.</description>
        <inlineHelpText>Indicates whether an email notification has been sent regarding this error.</inlineHelpText>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ErrorFields__c</fullName>
        <label>ErrorFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Error_Type__c</fullName>
        <description>Type of error that occurred</description>
        <inlineHelpText>Type of error that occurred</inlineHelpText>
        <label>Error Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Failed_Record_Ids__c</fullName>
        <label>Failed Record Ids</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Full_Message__c</fullName>
        <description>Full text of the error message</description>
        <inlineHelpText>Full text of the error message</inlineHelpText>
        <label>Full Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Object_Type__c</fullName>
        <description>Type of object on which the error occurred, if known.</description>
        <inlineHelpText>Type of object on which the error occurred, if known.</inlineHelpText>
        <label>Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Posted_in_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the error has been posted in Chatter.</description>
        <inlineHelpText>Indicates whether the error has been posted in Chatter.</inlineHelpText>
        <label>Posted in Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Random_Text__c</fullName>
        <label>Random Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Record_URL__c</fullName>
        <description>A link to the record which caused the error, if available.</description>
        <inlineHelpText>A link to the record which caused the error, if available.</inlineHelpText>
        <label>Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QPMS__Stack_Trace__c</fullName>
        <description>Stack trace for the thrown error, if available at runtime.</description>
        <inlineHelpText>Stack trace for the thrown error, if available at runtime.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <defaultValue>&apos;NONE&apos;</defaultValue>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>